Upgrading CXF and OpenSearch