@@ -65,7 +65,6 @@ import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Strings;
 import org.apache.commons.lang3.tuple.Pair;
-import org.apache.cxf.helpers.IOUtils;
 import org.apache.syncope.common.lib.SyncopeConstants;
 import org.apache.syncope.core.persistence.api.DomainHolder;
 import org.apache.syncope.core.persistence.api.dao.RealmSearchDAO;
@@ -115,14 +114,14 @@ public class XMLContentExporter extends AbstractXMLContentExporter {
                 case Types.LONGVARBINARY:
                     InputStream is = rs.getBinaryStream(columnName);
                     if (is != null) {
-                        value = DatatypeConverter.printHexBinary(IOUtils.toString(is).getBytes());
+                        value = DatatypeConverter.printHexBinary(is.readAllBytes());
                     }
                     break;
 
                 case Types.BLOB:
                     Blob blob = rs.getBlob(columnName);
                     if (blob != null) {
-                        value = DatatypeConverter.printHexBinary(IOUtils.toString(blob.getBinaryStream()).getBytes());
+                        value = DatatypeConverter.printHexBinary(blob.getBinaryStream().readAllBytes());
                     }
                     break;
 
